--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,73 @@
-.rowOne,
-.rowTwo,
-.rowThree {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+.boxGrid {
+  display: grid;
+  grid-template-columns: 33% 33% 33%;
+  grid-template-rows: 33% 33% 33%;
+}
+
+.boxGridTop {
+  grid-column-start: 2;
+  grid-column-end: 2;
+
+  grid-row-start: 1;
+  grid-row-end: 1;
+
+  justify-self: center;
+}
+
+.boxGridLeft {
+  grid-column-start: 1;
+  grid-column-end: 1;
+
+  grid-row-start: 2;
+  grid-row-end: 2;
+
+  justify-self: start;
+  align-self: center;
+}
+
+.boxGridRight {
+  grid-column-start: 3;
+  grid-column-end: 3;
+
+  grid-row-start: 2;
+  grid-row-end: 2;
+
+  justify-self: end;
+  align-self: center;
+}
+
+.boxGridBottom {
+  grid-column-start: 2;
+  grid-column-end: 2;
+
+  grid-row-start: 3;
+  grid-row-end: 3;
+
+  justify-self: center;
+  align-self: end;
+}
+
+.boxPositionOne {
+  transform: rotate(0deg);
+}
+
+.boxPositionTwo {
+  transform: rotate(90deg);
+}
+
+.boxPositionThree {
+  transform: rotate(180deg);
+}
+
+.boxPositionFour {
+  transform: rotate(270deg);
+}
+
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(90deg);
+  }
 }
