--- a/src/App.css
+++ b/src/App.css
@@ -7,9 +7,20 @@ body {
   text-align: center;
   font-family: "Inconsolata", monospace;
   background-color: #484848;
+  margin: 0;
 }
 .gameTopBar {
   text-align: center;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;
+  padding-top: 0.3rem;
+  padding-bottom: 0.3rem;
+  background-color: #3c3b3b;
 }
 
 .titleLeft {
@@ -26,6 +37,16 @@ body {
 
 p {
   color: #9bc8e5;
+}
+
+a,
+.linkColor {
+  color: #63a998;
+  text-decoration: none;
+}
+
+.commentColor {
+  color: #5c7249;
 }
 
 .up {
