--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Inconsolata&display=swap");
 
+/* --- Global declarations --- */
 html {
 }
 
@@ -14,6 +15,7 @@ p {
   color: #9bc8e5;
 }
 
+/* --- Component styling --- */
 .gameTopBar {
   text-align: center;
 }
@@ -28,6 +30,7 @@ p {
   background-color: #3c3b3b;
 }
 
+/* --- Game styling --- */
 .gameBoard {
   display: flex;
   flex-direction: column;
@@ -44,6 +47,11 @@ p {
   margin-bottom: 10px;
 }
 
+.train {
+  transition: 0.5s linear;
+}
+
+/* --- Colors --- */
 .titleLeft {
   color: #9bc8e5;
 }
@@ -90,10 +98,32 @@ a:hover,
   color: #cbc9a1;
 }
 
-#playButton {
+/* --- Button styling --- */
+.buttonsContainer {
   margin: auto;
 }
 
+#playButton {
+  margin-right: 1rem;
+}
+
+#nextLevelButton {
+}
+
+/* --- Removing default button styling --- */
+button,
+input[type="submit"],
+input[type="reset"] {
+  background: none;
+  color: inherit;
+  border: none;
+  padding: 0;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
+}
+
+/* --- Rotation Handler --- */
 .up {
   width: 90px;
   transform: rotate(0deg);
@@ -115,22 +145,4 @@ a:hover,
   width: 90px;
   transition: transform 0.3s ease;
   transform: rotate(270deg);
-}
-
-.train {
-  width: 90px;
-  transition: 0.5s linear;
-}
-
-/* --- Removing default button styling --- */
-button,
-input[type="submit"],
-input[type="reset"] {
-  background: none;
-  color: inherit;
-  border: none;
-  padding: 0;
-  font: inherit;
-  cursor: pointer;
-  outline: inherit;
 }
