--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,7 @@ p {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  margin-top: 4.5rem;
 }
 
 .gameRow {
@@ -43,8 +44,8 @@ p {
 }
 
 .gameTile {
-  margin-right: 10px;
-  margin-bottom: 10px;
+  margin-right: 8px;
+  margin-bottom: 8px;
 }
 
 .train {
@@ -125,24 +126,24 @@ input[type="reset"] {
 
 /* --- Rotation Handler --- */
 .up {
-  width: 90px;
+  width: 75px;
   transform: rotate(0deg);
 }
 
 .right {
-  width: 90px;
+  width: 75px;
   transition: transform 0.3s ease;
   transform: rotate(90deg);
 }
 
 .down {
-  width: 90px;
+  width: 75px;
   transition: transform 0.3s ease;
   transform: rotate(180deg);
 }
 
 .left {
-  width: 90px;
+  width: 75px;
   transition: transform 0.3s ease;
   transform: rotate(270deg);
 }
