--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,12 @@ p {
 .tileImage {
   width: 75px;
   transition: transform 0.3s ease;
+
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-drag: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
 }
 
 /* --- Game styling --- */
